2.4.28
- Cloggrum recipe fix
- UnderGarden x BetterCombat compat

2.4.27
- UnderGarden compat
- Config for allowing digger enchantments on weapons
- Config for blade of illusion and claw of determination

2.4.26
- Use new damage tracker lib

2.4.25
- Allow all weapons with be enchanted with digger tool enchantments as well
- Add Better Combat compat with compat material weapons

2.4.24
- Fix compat with Ice and Fire beta4
- Use L2Complements recraft recipe toggle, and render layer config

2.4.23
- Add Ice and Fire dragonsteel weapon set
- Add Twilight Forest Nunchaku

2.4.22
- Add default enchantments to claws and machetes
- Fix nunchaku text
- Allow nunchaku to be used with shield
- Fix nunchaku rendering in pause screen
- Fix nunchaku attack through wall

2.4.21
- Fix spear of winter storm model
- Add nunchaku

2.4.20
- Weapons now cost 1 durability for mining
- Add hammer, spear, battleaxe, javelin default enchantments
- Add Ironwood, Steeleaf, Fiery default enchantments
- Add compat with PST
- Add compat with X-Enchant

2.4.19
- Use 3D model for hammer
- Allow mobs to use abyss terror and abyss echo
- Lightning caused by weapons from this mod won't burn items or set blocks on fire
- Allow drowned to use throwable
- Allow Ghost Slash to stack when hitting things immune to it
- Adopt Ars Nouveau compat

2.4.18
- add Projection enchantment
- fix machete enchantment effects not time out when hit stack ends

2.4.17
- Add special abilities to AH compat
- fix logspam from compat tags and advancements

2.4.16
- Fix recipe related log spam
- add Aerial Hell compat weapons (as requested by cixon)

2.4.15
- fix fiery shield rendering
- add ghost slash enchantment
- add claw shielding enchantment